fix: refine responsive styles in PrescriptionForm for better layout on smaller screens

--- a/src/components/PrescriptionForm/form.module.scss
+++ b/src/components/PrescriptionForm/form.module.scss
@@ -5,12 +5,6 @@
     align-items: center;
     margin: 2rem 0;
 
-    // @media(max-width: 600px) {
-    //     width: 100vw;
-    //     padding-left: 20px;
-    //     padding-right: 20px;
-    // }
-
     h2 {
         margin-bottom: 60px;
     }
@@ -22,17 +16,12 @@
         column-gap: 100px;
 
         @media(max-width: 1100px) {
-            width: 100%;
+            width: 100vw;
             display: flex;
             flex-direction: column;
             column-gap: 0;
-        }
-
-        @media(max-width: 600px) {
-            width: 100vw;
-            align-items: center;
-            // padding-left: 20px;
-            // padding-right: 20px;
+            padding-left: 10vw;
+            padding-right: 10vw;
         }
 
         .input {
@@ -43,9 +32,8 @@
             margin-bottom: 50px;
             position: relative;
 
-            @media(max-width: 600px) {
-                min-width: calc(100vw - 40px);
-                max-width: fit-content;
+            @media(max-width: 1100px) {
+                max-width: 80vw;
             }
 
             label {
@@ -144,11 +132,11 @@
         margin-bottom: 40px;
         position: relative;
 
-        // @media(max-width: 600px) {
-        //     width: 100%;
-        //     min-width: fit-content;
-        //     max-width: calc(100vw - 40px);
-        // }
+        @media(max-width: 1100px) {
+            max-width: 80vw;
+            margin-left: 10vw;
+            margin-right: 10vw;
+        }
 
         label {
             font-size: 20px;
@@ -190,6 +178,10 @@
         padding: 10px 25px;
         border: none;
         cursor: pointer;
+
+        @media(max-width: 1100px) {
+            margin-left: 10vw;
+        }
     }
 }
 
@@ -198,7 +190,7 @@
 
         .gridContainer {
             .input {
-                max-width: 520px;
+                max-width: 80vw;
             }
         }
     }
@@ -225,6 +217,8 @@
 
         .gridContainer {
             width: calc(100vw - 40px);
+            padding-left: 0;
+            padding-right: 0;
 
             .input {
                 display: flex;
@@ -288,6 +282,8 @@
             width: 100%;
             min-width: fit-content;
             max-width: calc(100vw - 40px);
+            margin-left: 0;
+            margin-right: 0;
 
             label {
                 font-size: 16px;
@@ -305,6 +301,7 @@
 
         button {
             font-size: 18px;
+            margin-left: 0;
         }
     }
 }
